--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale="0.7">
+    <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="description" content="Avon">
    <meta name="author" content="Shaira Mae S. Cellona">
